[gd_scene load_steps=7 format=3 uid="uid://v6i2xlpq4o3o"]

[ext_resource type="Script" path="res://addons/pomogator/pomogator_ui.gd" id="1_lytwj"]
[ext_resource type="Script" path="res://addons/pomogator/select_file.gd" id="2_laoqs"]
[ext_resource type="Texture2D" uid="uid://blbecdwhacdh2" path="res://addons/pomogator/icons/apply.svg" id="2_wa42u"]
[ext_resource type="Texture2D" uid="uid://c682sxbbqmjk3" path="res://addons/pomogator/icons/reimport.svg" id="3_8sx28"]
[ext_resource type="Script" path="res://addons/pomogator/reimport_settings.gd" id="4_eo7uj"]
[ext_resource type="Texture2D" uid="uid://7q5hfssk7p5f" path="res://addons/pomogator/icons/pomogator.svg" id="4_nciii"]

[node name="Pomogator" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_lytwj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SelectFile" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
script = ExtResource("2_laoqs")

[node name="SelectFileVBoxContainer" type="VBoxContainer" parent="VBoxContainer/SelectFile"]
layout_mode = 2

[node name="Separator" type="PanelContainer" parent="VBoxContainer/SelectFile/SelectFileVBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/SelectFile/SelectFileVBoxContainer/Separator"]
layout_mode = 2
color = Color(0, 0, 0, 0.196078)

[node name="SelectFileSeparator" type="HBoxContainer" parent="VBoxContainer/SelectFile/SelectFileVBoxContainer/Separator"]
layout_mode = 2

[node name="SelectFileLabel" type="Label" parent="VBoxContainer/SelectFile/SelectFileVBoxContainer/Separator/SelectFileSeparator"]
layout_mode = 2
text = "Selected File"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/SelectFile/SelectFileVBoxContainer/Separator/SelectFileSeparator"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FilePathHBoxContainer" type="HBoxContainer" parent="VBoxContainer/SelectFile/SelectFileVBoxContainer"]
layout_mode = 2

[node name="FilePath" type="LineEdit" parent="VBoxContainer/SelectFile/SelectFileVBoxContainer/FilePathHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Path"
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="SelectButton" type="Button" parent="VBoxContainer/SelectFile/SelectFileVBoxContainer/FilePathHBoxContainer"]
layout_mode = 2
text = "Select"
icon = ExtResource("2_wa42u")

[node name="ReimportSettings" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
script = ExtResource("4_eo7uj")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ReimportSettings"]
layout_mode = 2

[node name="Separator" type="PanelContainer" parent="VBoxContainer/ReimportSettings/VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/ReimportSettings/VBoxContainer/Separator"]
layout_mode = 2
color = Color(0, 0, 0, 0.196078)

[node name="SelectFileSeparator" type="HBoxContainer" parent="VBoxContainer/ReimportSettings/VBoxContainer/Separator"]
layout_mode = 2

[node name="SelectFileLabel" type="Label" parent="VBoxContainer/ReimportSettings/VBoxContainer/Separator/SelectFileSeparator"]
layout_mode = 2
text = "Reimport Settings"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ReimportSettings/VBoxContainer/Separator/SelectFileSeparator"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ReimportSettings/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ReimportSettings/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SceneRoot" type="OptionButton" parent="VBoxContainer/ReimportSettings/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Node3D"
popup/item_0/id = 0
popup/item_1/text = "StaticBody3D"
popup/item_1/id = 1
popup/item_2/text = "RigidBody3D"
popup/item_2/id = 2

[node name="GenerateLod" type="CheckButton" parent="VBoxContainer/ReimportSettings/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Generate LODs"

[node name="ApplyLodDistances" type="CheckButton" parent="VBoxContainer/ReimportSettings/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Apply LODs Distances"

[node name="UseConvexCollision" type="CheckButton" parent="VBoxContainer/ReimportSettings/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Use Convex Collision"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/ReimportSettings/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ReimportSettings/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ReimportSettings/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Lod_0"

[node name="DistanceLod0" type="SpinBox" parent="VBoxContainer/ReimportSettings/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
value = 10.0
suffix = "m"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ReimportSettings/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ReimportSettings/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Lod_1"

[node name="DistanceLod1" type="SpinBox" parent="VBoxContainer/ReimportSettings/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
value = 20.0
suffix = "m"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/ReimportSettings/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ReimportSettings/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "Lod_2"

[node name="DistanceLod2" type="SpinBox" parent="VBoxContainer/ReimportSettings/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
value = 50.0
suffix = "m"

[node name="BotPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/BotPanel"]
layout_mode = 2
color = Color(0, 0, 0, 0.196078)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BotPanel"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ReimportButton" type="Button" parent="VBoxContainer/BotPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Reimport"
icon = ExtResource("3_8sx28")
flat = true

[node name="GetSettingButton" type="Button" parent="VBoxContainer/BotPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Get Settings(WIP)
"
icon = ExtResource("4_nciii")
flat = true

[node name="ResetButton" type="Button" parent="VBoxContainer/BotPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Reset(WIP)
"
icon = ExtResource("4_nciii")
flat = true
